# flastc

./: CMakeLists.txt  COMPILER_GUIDE.md  MODULE_CACHE_GUIDE.md  PACKAGES_README.md  README.md  class_test.fls  demo.fls  simple_test.fls  test.fls
build-scripts/: build.sh
scripts/: build.sh
src/: AST.h  CodeGen.cpp  CodeGen.h  ErrorHandler.cpp  ErrorHandler.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  Token.h  main.cpp
test/: main.fls
test/.build/cache/modules/simmath/: math_15607632712645277267.cache
test/simmath/: math.fls
